[package]
name = "ohos-deviceinfo"
version = "0.1.0"
edition = "2021"
description = "Bindings to OpenHarmony APIs providing information about the device"
license = "Apache-2.0"
repository = "https://github.com/openharmony-rs/ohos-deviceinfo"
keywords = ["OpenHarmony", "HarmonyOS", "ffi", "deviceinfo"]
readme = "Readme.md"

[dependencies]
ohos-deviceinfo-sys = "0.1.3"

[lints.clippy]
undocumented_unsafe_blocks = "forbid"

[package.metadata.docs.rs]
features = ["document-features"]
targets = ["aarch64-unknown-linux-ohos", "armv7-unknown-linux-ohos", "x86_64-unknown-linux-ohos"]
all-features = true